# CarrotQuant

./: .gitignore  README.md
backend/: aktest0.py  aktest1.py  main.py  pyproject.toml  trigger_task.py  verify_download.py
backend/api/: main.py
backend/api/endpoints/: market.py  system.py
backend/core/: config.py  exceptions.py  logging.py  sql_builder.py  storage.py
backend/models/: market.py  task.py
backend/scripts/: aktest1.py  aktest2.py  get_em_cookie.py
backend/services/: compute.py  data.py  market_manager.py  scheduler.py
backend/services/downloader/: base.py  eastmoney.py  sina.py
backend/services/utils/: processor.py
backend/tests/: test_download.py  test_download_integration.py  test_eastmoney.py  test_market_manager.py  test_sina.py  test_snapshot_refactor.py  test_storage.py  verify_data_loading.py
backend/www/: index.html
backend/www/static/js/: dashboard.js
frontend/: CarrotQuant.sln  Directory.Packages.props
frontend/CarrotQuant/: App.axaml  App.axaml.cs  ViewLocator.cs
frontend/CarrotQuant.Browser/: CarrotQuant.Browser.csproj  Program.cs
frontend/CarrotQuant.Browser/Properties/: launchSettings.json
frontend/CarrotQuant.Browser/wwwroot/: index.html
frontend/CarrotQuant.Desktop/: CarrotQuant.Desktop.csproj  Program.cs  app.manifest
frontend/CarrotQuant/ViewModels/: MainViewModel.cs  ViewModelBase.cs
frontend/CarrotQuant/Views/: MainView.axaml  MainView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs
